--- a/apps/products/templates/products/Girlclothes.html
+++ b/apps/products/templates/products/Girlclothes.html
@@ -1,88 +1,255 @@
-{% extends "top_bar.html" %} {% block title %}Girl Clothes{% endblock %} {% block topbar %} {% load static %}
+{% extends "top_bar.html" %} 
+{% block title %}Girl Clothes{% endblock %} 
+{% block topbar %} 
+{% load static %}
 <section class="w-full max-w-full overflow-hidden h-[500px] flex justify-center items-center mt-10 z-[10] relative">
 	<div class="flex gap-4 slider-container">
-	  <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><a href="Manclothes.html"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></a></div>
-	  <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></div>
-	  <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></div>
+	  <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><a href="Manclothes.html"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo" class="transform transition-transform duration-700 hover:scale-105"></a></div>
+	  <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo" class="transform transition-transform duration-700 hover:scale-105"></div>
+	  <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo" class="transform transition-transform duration-700 hover:scale-105"></div>
 	</div>
 	<div id="button" class="absolute flex flex-row justify-between items-center w-full" style="padding: 7% 7%;">
-	  <button id="prevBtn" class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center hover:bg-gray-200 transition shadow-xl"><svg class="w-[25px] h-[25px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/></svg></button>
+	  <button id="prevBtn" class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center hover:bg-gray-200 transition-all duration-300 shadow-xl hover-scale"><svg class="w-[25px] h-[25px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/></svg></button>
 
-	  <button id="nextBtn" class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center hover:bg-gray-200 transition shadow-xl"><svg xmlns="http://www.w3.org/2000/svg" class="w-[25px] h-[25px]" viewBox="0 0 320 512"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg></button>
+	  <button id="nextBtn" class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center hover:bg-gray-200 transition-all duration-300 shadow-xl hover-scale"><svg xmlns="http://www.w3.org/2000/svg" class="w-[25px] h-[25px]" viewBox="0 0 320 512"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg></button>
 	</div>
+    <div class="absolute bottom-4 left-1/2 transform -translate-x-1/2 flex space-x-2">
+        <span class="w-3 h-3 bg-white rounded-full opacity-70 cursor-pointer dot active"></span>
+        <span class="w-3 h-3 bg-white rounded-full opacity-40 cursor-pointer dot"></span>
+        <span class="w-3 h-3 bg-white rounded-full opacity-40 cursor-pointer dot"></span>
+    </div>
 </section>
 <section class="flex flex-col mt-10 gap-2 w-full justify-center items-center pl-[104px] pr-[104px] mb-10">
 	<div class="flex flex-col gap-2">
-		<span class="text-[20px]" style="font-family: Microsoft Sans Serif">Categories</span>
+		<span class="text-[20px] relative inline-block mb-2" style="font-family: Microsoft Sans Serif">
+            <span class="relative z-10">Categories</span>
+            <span class="absolute bottom-0 left-0 w-1/3 h-1 bg-pink-200 z-0"></span>
+        </span>
 		<div class="flex flex-row w-full justify-between gap-2.5">
-			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-				<a href="{% url 'products:shop' %}?gender=women">
-					<img src="{%static 'Photo/Woman_clothes_1.png'%}" class="w-full h-[311px]" alt="T-shirt" />
+			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden group">
+				<a href="{% url 'products:shop' %}?gender=women" class="relative w-full h-full overflow-hidden">
+					<img src="{%static 'Photo/Woman_clothes_1.png'%}" class="w-full h-[311px] category-image transition-all duration-500 group-hover:scale-110" alt="T-shirt" />
+                    <div class="absolute inset-0 bg-black bg-opacity-20 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+                        <span class="text-white text-xl font-bold transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300">Dresses</span>
+                    </div>
 				</a>
 			</div>
-			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-				<a href="{% url 'products:shop' %}">
-					<img src="{%static 'Photo/Woman_clothes_2.png'%}" class="w-full h-full" alt="accessories" />
+			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden group">
+				<a href="{% url 'products:shop' %}" class="relative w-full h-full overflow-hidden">
+					<img src="{%static 'Photo/Woman_clothes_2.png'%}" class="w-full h-full category-image transition-all duration-500 group-hover:scale-110" alt="accessories" />
+                    <div class="absolute inset-0 bg-black bg-opacity-20 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+                        <span class="text-white text-xl font-bold transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300">Tops</span>
+                    </div>
 				</a>
 			</div>
-			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-				<a href="{% url 'products:shop' %}">
-					<img src="{%static 'Photo/Woman_clothes_3.png'%}" class="w-full h-full" alt="Shose" />
+			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden group">
+				<a href="{% url 'products:shop' %}" class="relative w-full h-full overflow-hidden">
+					<img src="{%static 'Photo/Woman_clothes_3.png'%}" class="w-full h-full category-image transition-all duration-500 group-hover:scale-110" alt="Shoes" />
+                    <div class="absolute inset-0 bg-black bg-opacity-20 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+                        <span class="text-white text-xl font-bold transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300">Skirts</span>
+                    </div>
 				</a>
 			</div>
-			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-				<a href=""><img src="{%static 'Photo/Woman_clothes_4.png'%}" class="w-full h-full" alt="Parfume" /></a>
+			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden group">
+				<a href="" class="relative w-full h-full overflow-hidden">
+                    <img src="{%static 'Photo/Woman_clothes_4.png'%}" class="w-full h-full category-image transition-all duration-500 group-hover:scale-110" alt="Parfume" />
+                    <div class="absolute inset-0 bg-black bg-opacity-20 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+                        <span class="text-white text-xl font-bold transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300">Accessories</span>
+                    </div>
+                </a>
 			</div>
 		</div>
-		<div class="flex flex-row w-full justify-between gap-2.5">
-			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-				<a href="{% url 'products:shop' %}">
-					<img src="{%static 'Photo/Woman_clothes_5.png'%}" class="w-full h-full" alt="T-shirt" />
+		<div class="flex flex-row w-full justify-between gap-2.5 mt-2">
+			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden group">
+				<a href="{% url 'products:shop' %}" class="relative w-full h-full overflow-hidden">
+					<img src="{%static 'Photo/Woman_clothes_5.png'%}" class="w-full h-full category-image transition-all duration-500 group-hover:scale-110" alt="T-shirt" />
+                    <div class="absolute inset-0 bg-black bg-opacity-20 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+                        <span class="text-white text-xl font-bold transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300">Pants</span>
+                    </div>
 				</a>
 			</div>
-			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-				<a href="{% url 'products:shop' %}">
-					<img src="{%static 'Photo/Woman_clothes_6.png'%}" class="w-full h-full" alt="accessories" />
+			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden group">
+				<a href="{% url 'products:shop' %}" class="relative w-full h-full overflow-hidden">
+					<img src="{%static 'Photo/Woman_clothes_6.png'%}" class="w-full h-full category-image transition-all duration-500 group-hover:scale-110" alt="accessories" />
+                    <div class="absolute inset-0 bg-black bg-opacity-20 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+                        <span class="text-white text-xl font-bold transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300">Jackets</span>
+                    </div>
 				</a>
 			</div>
-			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-				<a href="{% url 'products:shop' %}">
-					<img src="{%static 'Photo/Woman_clothes_7.png'%}" class="w-full h-full" alt="Shose" />
+			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden group">
+				<a href="{% url 'products:shop' %}" class="relative w-full h-full overflow-hidden">
+					<img src="{%static 'Photo/Woman_clothes_7.png'%}" class="w-full h-full category-image transition-all duration-500 group-hover:scale-110" alt="Shoes" />
+                    <div class="absolute inset-0 bg-black bg-opacity-20 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+                        <span class="text-white text-xl font-bold transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300">Shoes</span>
+                    </div>
 				</a>
 			</div>
-			<a href="{% url 'products:shop' %}">
-				<div
-					class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-[#D9D9D9] text-[35px] overflow-hidden"
-				>
-					<span>See</span>
-					<span>More</span>
-				</div>
-			</a>
+			<a href="{% url 'products:shop' %}" class="w-[310px] h-[310px] bg-[#D9D9D9] text-[35px] overflow-hidden flex flex-col justify-center items-center hover-scale transition-all duration-300 hover:bg-[#c4c4c4] group">
+                <span class="transform group-hover:scale-110 transition-transform duration-300">See</span>
+                <span class="transform group-hover:scale-110 transition-transform duration-300">More</span>
+                <div class="mt-2 w-8 h-8 rounded-full bg-white flex items-center justify-center opacity-0 group-hover:opacity-100 transition-all duration-300 transform translate-y-4 group-hover:translate-y-0">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+                    </svg>
+                </div>
+            </a>
 		</div>
 	</div>
 </section>
-<section class="w-[84%] h-[180px] bg-black m-auto flex items-center overflow-hidden mb-10">
-	<a href="{% url 'products:shop' %}">
-		<div class="relative">
+<section class="w-[84%] h-[180px] bg-black m-auto flex items-center overflow-hidden mb-10 relative group">
+	<a href="{% url 'products:shop' %}" class="block w-full h-full">
+		<div class="relative w-full h-full overflow-hidden">
 			<img
-				class="relative top-20 w-full scale-110 blur-[1px]"
+				class="relative top-20 w-full scale-110 blur-[1px] transition-all duration-700 group-hover:blur-none group-hover:scale-105"
 				src="{%static 'Photo\jaanus-jagomagi-FFUPFHcp2YU-unsplash.jpg'%}"
 				alt=""
 			/>
 		</div>
+		<div class="absolute flex flex-col pl-[3%] text-[25px] text-white font-bold top-1/2 transform -translate-y-1/2">
+			<span class="transform transition-transform duration-500 group-hover:translate-x-2">Sale of collections</span>
+			<span class="transform transition-transform duration-500 delay-100 group-hover:translate-x-2">From previous seasons</span>
+            <div class="mt-2 bg-white text-black text-sm py-1 px-3 rounded-full inline-flex items-center opacity-0 group-hover:opacity-100 transition-all duration-500 delay-200 transform translate-y-4 group-hover:translate-y-0 w-max">
+                <span>Shop now</span>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+                </svg>
+            </div>
+		</div>
 	</a>
-	<div class="absolute flex flex-col pl-[3%] text-[25px] text-white font-bold">
-		<span>Sale of collections</span>
-		<span>From previous seasons</span>
-	</div>
 </section>
 <style>
 	.slider-container {
-		transition: transform 0.4s ease-in-out;
+		transition: transform 0.6s cubic-bezier(0.25, 0.1, 0.25, 1);
 	}
 	.slide {
 		flex: 0 0 100%;
 	}
-	</style>
-  <script src="{% static 'js/index.js' %}"></script>
+    .dot {
+        transition: all 0.3s ease;
+    }
+    .dot.active {
+        transform: scale(1.2);
+        opacity: 1;
+    }
+    
+    /* Add a subtle pulse animation to category images on hover */
+    @keyframes subtle-pulse {
+        0% { transform: scale(1); }
+        50% { transform: scale(1.02); }
+        100% { transform: scale(1); }
+    }
+    
+    .category-image:hover {
+        animation: subtle-pulse 2s infinite;
+    }
+</style>
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    // Enhanced slider functionality
+    const sliderContainer = document.querySelector('.slider-container');
+    const slides = document.querySelectorAll('.slide');
+    const prevBtn = document.getElementById('prevBtn');
+    const nextBtn = document.getElementById('nextBtn');
+    const dots = document.querySelectorAll('.dot');
+    
+    let currentIndex = 0;
+    const totalSlides = slides.length;
+    
+    // Auto slide functionality
+    let autoSlideInterval;
+    
+    function startAutoSlide() {
+        autoSlideInterval = setInterval(() => {
+            goToSlide((currentIndex + 1) % totalSlides);
+        }, 5000); // Change slide every 5 seconds
+    }
+    
+    function stopAutoSlide() {
+        clearInterval(autoSlideInterval);
+    }
+    
+    function goToSlide(index) {
+        currentIndex = index;
+        sliderContainer.style.transform = `translateX(-${currentIndex * 100}%)`;
+        
+        // Update dots
+        dots.forEach((dot, i) => {
+            if (i === currentIndex) {
+                dot.classList.add('active');
+                dot.style.opacity = '1';
+            } else {
+                dot.classList.remove('active');
+                dot.style.opacity = '0.4';
+            }
+        });
+    }
+    
+    prevBtn.addEventListener('click', () => {
+        stopAutoSlide();
+        goToSlide((currentIndex - 1 + totalSlides) % totalSlides);
+        startAutoSlide();
+    });
+    
+    nextBtn.addEventListener('click', () => {
+        stopAutoSlide();
+        goToSlide((currentIndex + 1) % totalSlides);
+        startAutoSlide();
+    });
+    
+    // Add click event to dots
+    dots.forEach((dot, i) => {
+        dot.addEventListener('click', () => {
+            stopAutoSlide();
+            goToSlide(i);
+            startAutoSlide();
+        });
+    });
+    
+    // Add touch swipe functionality
+    let touchStartX = 0;
+    let touchEndX = 0;
+    
+    sliderContainer.addEventListener('touchstart', (e) => {
+        touchStartX = e.changedTouches[0].screenX;
+        stopAutoSlide();
+    }, false);
+    
+    sliderContainer.addEventListener('touchend', (e) => {
+        touchEndX = e.changedTouches[0].screenX;
+        handleSwipe();
+        startAutoSlide();
+    }, false);
+    
+    function handleSwipe() {
+        if (touchEndX < touchStartX - 50) {
+            // Swipe left
+            goToSlide((currentIndex + 1) % totalSlides);
+        } else if (touchEndX > touchStartX + 50) {
+            // Swipe right
+            goToSlide((currentIndex - 1 + totalSlides) % totalSlides);
+        }
+    }
+    
+    // Add scroll reveal effect for categories
+    const revealElements = document.querySelectorAll('.flex-col > div');
+    
+    function checkScroll() {
+        revealElements.forEach(element => {
+            const elementTop = element.getBoundingClientRect().top;
+            const elementVisible = 150;
+            
+            if (elementTop < window.innerHeight - elementVisible) {
+                element.classList.add('animate-fade-in');
+            }
+        });
+    }
+    
+    window.addEventListener('scroll', checkScroll);
+    checkScroll(); // Check on initial load
+    
+    // Start auto slide on page load
+    startAutoSlide();
+});
+</script>
+<script src="{% static 'js/index.js' %}"></script>
 {% endblock %}
