--- a/apps/products/templates/products/index.html
+++ b/apps/products/templates/products/index.html
@@ -1,46 +1,103 @@
 {% extends "top_bar.html" %}
 {% load static %}
+{% block title %}Home{% endblock %}
 {% block topbar %}
   <div class="Man-categories">
     <section class="w-full max-w-full overflow-hidden h-[500px] flex justify-center items-center mt-10 z-[10] relative">
       <div class="flex gap-4 slider-container">
-        <div class="w-[1500px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><a href="Manclothes.html"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></a></div>
-        <div class="w-[1500px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></div>
-        <div class="w-[1500px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></div>
+        <div class="w-[1500px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><a href="Manclothes.html"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo" class="transform transition-transform duration-700 hover:scale-105"></a></div>
+        <div class="w-[1500px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo" class="transform transition-transform duration-700 hover:scale-105"></div>
+        <div class="w-[1500px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo" class="transform transition-transform duration-700 hover:scale-105"></div>
       </div>
       <div id="button" class="absolute flex flex-row justify-between items-center w-full" style="padding: 7% 7%;">
-        <button id="prevBtn" class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center hover:bg-gray-200 transition shadow-xl"><svg class="w-[25px] h-[25px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/></svg></button>
+        <button id="prevBtn" class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center hover:bg-gray-200 transition-all duration-300 shadow-xl hover-scale"><svg class="w-[25px] h-[25px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/></svg></button>
   
-        <button id="nextBtn" class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center hover:bg-gray-200 transition shadow-xl"><svg xmlns="http://www.w3.org/2000/svg" class="w-[25px] h-[25px]" viewBox="0 0 320 512"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg></button>
+        <button id="nextBtn" class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center hover:bg-gray-200 transition-all duration-300 shadow-xl hover-scale"><svg xmlns="http://www.w3.org/2000/svg" class="w-[25px] h-[25px]" viewBox="0 0 320 512"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg></button>
+      </div>
+      <div class="absolute bottom-4 left-1/2 transform -translate-x-1/2 flex space-x-2">
+        <span class="w-3 h-3 bg-white rounded-full opacity-70 cursor-pointer dot active"></span>
+        <span class="w-3 h-3 bg-white rounded-full opacity-40 cursor-pointer dot"></span>
+        <span class="w-3 h-3 bg-white rounded-full opacity-40 cursor-pointer dot"></span>
       </div>
   </section>
   <section class="flex flex-col items-center mt-5 gap-2 w-full pl-[104px] pr-[104px] mb-20">
     
-    <div class="flex flex-col gap-2 ">
-      <span class="text-[20px]" style="font-family: Microsoft Sans Serif;">For Woman</span>
-      <div class="flex flex-row w-full justify-between gap-2.5" >
-        <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-          <a href="{% url 'products:girlclothes' %}"><img src="static/Photo/Screenshot_85.png" alt="T-shirt" class="[310px] h-[310px]"></a></div>
-          <a href="{% url 'products:shop' %}?gender=women"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden " ><img src="static/Photo/Screenshot_84.png" class="w-full h-full" alt="accessories">
-          </div></a>
-          <a href="{% url 'products:shop' %}?gender=women"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"><img src="static/Photo/Screenshot_86.png" class="w-full h-full" alt="Shose"></div></a>
-          <a href="{% url 'products:shop' %}?gender=women"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"><img src="static/Photo/Screenshot_87.png" class="w-full h-full" alt="Parfume"></div></a>
+    <div class="flex flex-col gap-2">
+      <span class="text-[20px] relative inline-block mb-2" style="font-family: Microsoft Sans Serif;">
+        <span class="relative z-10">For Woman</span>
+        <span class="absolute bottom-0 left-0 w-1/3 h-1 bg-pink-200 z-0"></span>
+      </span>
+      <div class="flex flex-row w-full justify-between gap-2.5">
+        <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden group">
+          <a href="{% url 'products:girlclothes' %}" class="relative w-full h-full overflow-hidden">
+            <img src="static/Photo/Screenshot_85.png" alt="T-shirt" class="w-full h-full category-image transition-all duration-500 group-hover:scale-110">
+            <div class="absolute inset-0 bg-black bg-opacity-20 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+              <span class="text-white text-xl font-bold transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300">Clothes</span>
+            </div>
+          </a>
+        </div>
+        <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden group">
+          <a href="{% url 'products:shop' %}?gender=women" class="relative w-full h-full overflow-hidden">
+            <img src="static/Photo/Screenshot_84.png" class="w-full h-full category-image transition-all duration-500 group-hover:scale-110" alt="accessories">
+            <div class="absolute inset-0 bg-black bg-opacity-20 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+              <span class="text-white text-xl font-bold transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300">Accessories</span>
+            </div>
+          </a>
+        </div>
+        <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden group">
+          <a href="{% url 'products:shop' %}?gender=women" class="relative w-full h-full overflow-hidden">
+            <img src="static/Photo/Screenshot_86.png" class="w-full h-full category-image transition-all duration-500 group-hover:scale-110" alt="Shoes">
+            <div class="absolute inset-0 bg-black bg-opacity-20 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+              <span class="text-white text-xl font-bold transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300">Shoes</span>
+            </div>
+          </a>
+        </div>
+        <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden group">
+          <a href="{% url 'products:shop' %}?gender=women" class="relative w-full h-full overflow-hidden">
+            <img src="static/Photo/Screenshot_87.png" class="w-full h-full category-image transition-all duration-500 group-hover:scale-110" alt="Parfume">
+            <div class="absolute inset-0 bg-black bg-opacity-20 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+              <span class="text-white text-xl font-bold transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300">Perfumes</span>
+            </div>
+          </a>
+        </div>
       </div>
-      <span class="text-[20px] mt-3" style="font-family: Microsoft Sans Serif;">For Man</span>
-      <div class="flex flex-row w-full justify-between gap-2.5 " >
-        <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-          <a href="{% url 'products:manclothes' %}">
-            <img src="static/Photo/Screenshot_91.png" class="w-full h-full" alt="T-shirt">
-          </a></div>
-          <a href="{% url 'products:shop' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-            <img src="static/Photo/Screenshot_90.png" class="w-full h-full" alt="accessories">
-          </div></a>
-          <a href="{% url 'products:shop' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-            <img src="static/Photo/Screenshot_89.png" class="w-full h-full" alt="Shose">
-          </div></a>
-          <a href="{% url 'products:shop' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-            <img src="static/Photo/Screenshot_88.png" class="w-full h-full" alt="Parfume">
-          </div></a>
+      <span class="text-[20px] mt-8 relative inline-block mb-2" style="font-family: Microsoft Sans Serif;">
+        <span class="relative z-10">For Man</span>
+        <span class="absolute bottom-0 left-0 w-1/3 h-1 bg-blue-200 z-0"></span>
+      </span>
+      <div class="flex flex-row w-full justify-between gap-2.5">
+        <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden group">
+          <a href="{% url 'products:manclothes' %}" class="relative w-full h-full overflow-hidden">
+            <img src="static/Photo/Screenshot_91.png" class="w-full h-full category-image transition-all duration-500 group-hover:scale-110" alt="T-shirt">
+            <div class="absolute inset-0 bg-black bg-opacity-20 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+              <span class="text-white text-xl font-bold transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300">Clothes</span>
+            </div>
+          </a>
+        </div>
+        <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden group">
+          <a href="{% url 'products:shop' %}" class="relative w-full h-full overflow-hidden">
+            <img src="static/Photo/Screenshot_90.png" class="w-full h-full category-image transition-all duration-500 group-hover:scale-110" alt="accessories">
+            <div class="absolute inset-0 bg-black bg-opacity-20 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+              <span class="text-white text-xl font-bold transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300">Accessories</span>
+            </div>
+          </a>
+        </div>
+        <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden group">
+          <a href="{% url 'products:shop' %}" class="relative w-full h-full overflow-hidden">
+            <img src="static/Photo/Screenshot_89.png" class="w-full h-full category-image transition-all duration-500 group-hover:scale-110" alt="Shoes">
+            <div class="absolute inset-0 bg-black bg-opacity-20 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+              <span class="text-white text-xl font-bold transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300">Shoes</span>
+            </div>
+          </a>
+        </div>
+        <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden group">
+          <a href="{% url 'products:shop' %}" class="relative w-full h-full overflow-hidden">
+            <img src="static/Photo/Screenshot_88.png" class="w-full h-full category-image transition-all duration-500 group-hover:scale-110" alt="Parfume">
+            <div class="absolute inset-0 bg-black bg-opacity-20 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+              <span class="text-white text-xl font-bold transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300">Perfumes</span>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
     
@@ -48,11 +105,137 @@
 </div>
 <style>
   .slider-container {
-      transition: transform 0.8s ease-in-out;
+      transition: transform 0.8s cubic-bezier(0.25, 0.1, 0.25, 1);
   }
   .slide {
       flex: 0 0 100%;
   }
-  </style>
+  .dot {
+      transition: all 0.3s ease;
+  }
+  .dot.active {
+      transform: scale(1.2);
+      opacity: 1;
+  }
+  
+  /* Add a subtle pulse animation to category images on hover */
+  @keyframes subtle-pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.02); }
+      100% { transform: scale(1); }
+  }
+  
+  .category-image:hover {
+      animation: subtle-pulse 2s infinite;
+  }
+</style>
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    // Enhanced slider functionality
+    const sliderContainer = document.querySelector('.slider-container');
+    const slides = document.querySelectorAll('.slide');
+    const prevBtn = document.getElementById('prevBtn');
+    const nextBtn = document.getElementById('nextBtn');
+    const dots = document.querySelectorAll('.dot');
+    
+    let currentIndex = 0;
+    const totalSlides = slides.length;
+    
+    // Auto slide functionality
+    let autoSlideInterval;
+    
+    function startAutoSlide() {
+        autoSlideInterval = setInterval(() => {
+            goToSlide((currentIndex + 1) % totalSlides);
+        }, 5000); // Change slide every 5 seconds
+    }
+    
+    function stopAutoSlide() {
+        clearInterval(autoSlideInterval);
+    }
+    
+    function goToSlide(index) {
+        currentIndex = index;
+        sliderContainer.style.transform = `translateX(-${currentIndex * 100}%)`;
+        
+        // Update dots
+        dots.forEach((dot, i) => {
+            if (i === currentIndex) {
+                dot.classList.add('active');
+                dot.style.opacity = '1';
+            } else {
+                dot.classList.remove('active');
+                dot.style.opacity = '0.4';
+            }
+        });
+    }
+    
+    prevBtn.addEventListener('click', () => {
+        stopAutoSlide();
+        goToSlide((currentIndex - 1 + totalSlides) % totalSlides);
+        startAutoSlide();
+    });
+    
+    nextBtn.addEventListener('click', () => {
+        stopAutoSlide();
+        goToSlide((currentIndex + 1) % totalSlides);
+        startAutoSlide();
+    });
+    
+    // Add click event to dots
+    dots.forEach((dot, i) => {
+        dot.addEventListener('click', () => {
+            stopAutoSlide();
+            goToSlide(i);
+            startAutoSlide();
+        });
+    });
+    
+    // Add touch swipe functionality
+    let touchStartX = 0;
+    let touchEndX = 0;
+    
+    sliderContainer.addEventListener('touchstart', (e) => {
+        touchStartX = e.changedTouches[0].screenX;
+        stopAutoSlide();
+    }, false);
+    
+    sliderContainer.addEventListener('touchend', (e) => {
+        touchEndX = e.changedTouches[0].screenX;
+        handleSwipe();
+        startAutoSlide();
+    }, false);
+    
+    function handleSwipe() {
+        if (touchEndX < touchStartX - 50) {
+            // Swipe left
+            goToSlide((currentIndex + 1) % totalSlides);
+        } else if (touchEndX > touchStartX + 50) {
+            // Swipe right
+            goToSlide((currentIndex - 1 + totalSlides) % totalSlides);
+        }
+    }
+    
+    // Add scroll reveal effect for categories
+    const revealElements = document.querySelectorAll('.flex-col > div');
+    
+    function checkScroll() {
+        revealElements.forEach(element => {
+            const elementTop = element.getBoundingClientRect().top;
+            const elementVisible = 150;
+            
+            if (elementTop < window.innerHeight - elementVisible) {
+                element.classList.add('animate-fade-in');
+            }
+        });
+    }
+    
+    window.addEventListener('scroll', checkScroll);
+    checkScroll(); // Check on initial load
+    
+    // Start auto slide on page load
+    startAutoSlide();
+});
+</script>
 <script src="{% static 'js/index.js' %}"></script>
-{% endblock  %}
+{% endblock %}
